@@ -11,6 +11,7 @@ o  Fix .spec file
 o  Fix redhat init script
 o  Better logging of host lookup failures when no-lookup is specified
 o  Better logging of SSL Junk
+o  Handle unseeded entries in LDAP and possibly other database modules
 
 From Rob Wyn Jones
 * Allow multiple servers for a user (or default) are connect to in series
